--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,68 @@
-### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+# ==============================================
+# Java Build Artifacts
+# ==============================================
+*.class
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+# ==============================================
+# Gradle / Maven
+# ==============================================
+.gradle/
+!gradle-wrapper.jar
+build/
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+.gradle-cache/
+.mvn/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# ==============================================
+# IntelliJ IDEA Specific
+# ==============================================
+.idea/
+*.iml
+*.ipr
+*.iws
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+.idea/**/libraries
+.idea/**/modules.xml
 
-### VS Code ###
-.vscode/
+# ==============================================
+# Logs / Temp Files
+# ==============================================
+*.log
+*.tmp
+*.bak
+*.swp
+*.orig
 
-### Mac OS ###
+# ==============================================
+# Environment Files
+# ==============================================
+.env
+.env.*
+*.local.properties
+*.properties.local
+
+# ==============================================
+# OS-specific
+# ==============================================
 .DS_Store
+Thumbs.db
+ehthumbs.db
+Icon?
